RESOLVED FIXED41701
Parts of page disappear
https://bugs.webkit.org/show_bug.cgi?id=41701
Summary Parts of page disappear
Nathan Lawrence
Reported 2010-07-06 09:03:58 PDT
Steps to reproduce: 1) Visit http://inhabitat.com/2010/06/29/university-of-michigan-solar-car-team-wins-american-solar-challenge/ 2) Scroll down below the header of the page 3) Let the page sit for a few minutes 4) Scroll back up, the header is gone.
Attachments
Patch (10.98 KB, patch)
2010-12-14 17:43 PST, Simon Fraser (smfr)
cmarrin: review+
Alexey Proskuryakov
Comment 1 2010-07-06 12:56:37 PDT
I cannot reproduce this with Safari 5.0 on Snow Leopard. Could you please describe your configuration (OS, Safari and Flash versions, 64 bit or 32 bit)? Is this reliably reproducible? Does this happen with Flash disabled?
Nathan Lawrence
Comment 2 2010-07-06 13:45:13 PDT
After investigating further, this problem seems to involve plugins. It is unnecessary to scroll down on the page to cause the header to disappear. Disabling plugins seems to cause the problem to go away. After the header has disappeared, if you turn plugins off, the header will reappear, and then disappear when plugins are turned back on. I'm running 64bit Safari 5.0 on Snow Leopard. It seems to alternate between the entire header disappearing, and just the logo in the upper left disappearing. I have also confirmed that the problem exists on the r62241 nightly build for Snow Leopard.
Nathan Lawrence
Comment 3 2010-07-06 13:58:46 PDT
The version of flash that I am running (http://kb2.adobe.com/cps/155/tn_15507.html) is 10,1,53,64.
Simon Fraser (smfr)
Comment 4 2010-07-06 14:12:07 PDT
Simon Fraser (smfr)
Comment 5 2010-07-06 14:19:48 PDT
Does this happen with TOT?
Nathan Lawrence
Comment 6 2010-07-07 08:41:55 PDT
Running on a debug build of revision 62596 (2010-07-06 14:21:37), the problem still seems to occur.
Simon Fraser (smfr)
Comment 7 2010-12-14 17:43:32 PST
Chris Marrin
Comment 8 2010-12-14 17:50:24 PST
Comment on attachment 76601 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=76601&action=review > LayoutTests/compositing/geometry/limit-layer-bounds-opacity-transition.html:64 > +</html> Since this test involves video (and it looks like a plugin is required to tickle the bug), shouldn't it have plugin or video in the name? > WebCore/rendering/RenderLayerBacking.cpp:1156 > + return didAnimateTransform || didAnimateOpacity; Yeah, much better logic
Simon Fraser (smfr)
Comment 9 2010-12-14 17:53:00 PST
Note You need to log in before you can comment on or make changes to this bug.