2010-12-14  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Chris Marrin.

        Parts of page disappear
        https://bugs.webkit.org/show_bug.cgi?id=41701

        The page has text-indent: -1000000px on an element that becomes
        compositing, causing a huge tiled layer to get created.

        r63452 aimed to fix this by clamping layer bounds to the viewport,
        but did not do so for pages running accelerated animations (since
        we don't want to clamp for transform animations). However, this
        page only has an opacity animation.

        So refine the logic added for r63452 to only call setCompositingConsultsOverlap(false)
        for transform animations.

        Test: compositing/geometry/limit-layer-bounds-opacity-transition.html

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::startAnimation): call didStartAcceleratedAnimation()
        with the appropriate properties, and clean up confusing logic that was used to
        compute the return value. We want to return true if either property is accelerated.

        (WebCore::RenderLayerBacking::startTransition): Call didStartAcceleratedAnimation()
        with the appropriate property.

        * rendering/RenderLayerCompositor.h:
        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::didStartAcceleratedAnimation): Pass the property in,
        and only turn off overlap testing if we see a transform animation.

Canonical link: https://commits.webkit.org/64432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74085 268f45cc-cd09-0410-ab3c-d52691b4dbfc